--- a/Newbook.html
+++ b/Newbook.html
@@ -84,7 +84,7 @@
 </div>
 
 <div class="container">
-    <div class="page-header">
+    <div class="page-header container">
         <h1>
             每日好书 <small>用心给你最好的推荐</small>
         </h1>
