--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
 
     <div class="page-header container">
-        <h1 style="margin-left:5em;color:#f35336;">
+        <h1 class="zhuti">
             主题专栏 <small>更多活动等你参加</small>
         </h1>
     </div>
