--- a/About.html
+++ b/About.html
@@ -214,6 +214,7 @@
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+<script src="js/click.js"></script>
 
 </body>
 
