第六次修改

--- a/Newbook.html
+++ b/Newbook.html
@@ -50,14 +50,14 @@
   <!-- 屏幕宽度小于768px时，div.navbar-responsive-collapse容器里的内容都会隐藏，显示icon-bar图标，当点击icon-bar图标时，再展开。屏幕大于768px时，默认显示。 -->
   <div class="collapse navbar-collapse navbar-responsive-collapse">
     	<ul class="nav nav-pills" style="float: right;">
-      		<li><a href="index.html">首页</a></li>
+      		<li><a href="index.html">豆瓣首页</a></li>
       		<li><a href="Today.html">今日推荐</a></li>
       		<li><a href="Year.html">年度读书</a></li>
       		<li><a href="Newbook.html">新书推荐</a></li>
       		<li><a href="About.html">关于本站</a></li>
       		<li class="dropdown">
       			<a class="dropdown-toggle" data-toggle="dropdown">
-                                            无名
+                                        无名之人
                     <span class="caret"></span>
                 </a>
       			<ul class="dropdown-menu">
@@ -70,57 +70,9 @@
 	 	</ul>
   </div>
 </div>
-    <div class="row clearfix">
-        <div class="col-md-12 column">
-            <div class="nav nav-tabs pull-left">
-                <h1>清风徐来
-                    <small>——精品图书推荐</small>
-                </h1>
-            </div>
-            <ul class="nav nav-tabs pull-right">
-                <li>
-                    <a href="index.html">首页</a>
-                </li>
-                <li>
-                    <a href="Today.html">今日推荐</a>
-                </li>
-                <li>
-                    <a href="Year.html">年度读书</a>
-                </li>
-                <li>
-                    <a href="Newbook.html">新书推荐</a>
-                </li>
-                <li>
-                    <a href="About.html">关于本站</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">更多
-                        <strong class="caret"></strong>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">登陆</a>
-                        </li>
-                        <li>
-                            <a href="#">注册</a>
-                        </li>
-                        <li>
-                            <a href="#">了解更多</a>
-                        </li>
-                        <li class="divider">
-                        </li>
-                        <li>
-                            <a href="#">赞赏</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
 
 <div class="container mainbody">
-    <div class="page-header container">
+    <div class="page-header container" style="margin-top: 0em;">
         <h1>
             每日好书 <small>用心给你最好的推荐</small>
         </h1>
@@ -131,8 +83,6 @@
     </div>
 
     <div id="myCarousel" class="carousel slide">
-        <div class="col-md-12 column">
-            <div class="row clearfix">
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                     <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -142,43 +92,9 @@
 
                 <div class="carousel-inner">
                     <div class="item active">
-                        <div class="row clearfix">
-                            <div class="col-md-2 column">
-                                <a href="http://book.douban.com/subject/25862578/">
-                                    <img class="row-img" src="images/首页轮播/解忧杂货店.jpg" alt="Pulpit rock">
-                                </a>
-                            </div>
-                            <div class="col-md-2 column">
-                                <a href="http://book.douban.com/subject/1770782/">
-                                    <img class="row-img" src="images/首页轮播/追风筝的人.jpg" alt="Pulpit rock">
-                                </a>
-                            </div>
-                            <div class="col-md-2 column">
-                                <a href="http://book.douban.com/subject/26698660/">
-                                    <img class="row-img" src="images/首页轮播/巨人的陨落.jpg" alt="Pulpit rock">
-                                </a>
-                            </div>
-                            <div class="col-md-2 column">
-                                <a href="http://book.douban.com/subject/26886310/">
-                                    <img class="row-img" src="images/首页轮播/有匪1.jpg" alt="Pulpit rock">
-                                </a>
-                            </div>
-                            <div class="col-md-2 column">
-                                <a href="http://book.douban.com/subject/26864983/">
-                                    <img class="row-img" src="images/首页轮播/思家小馆的晚餐.jpg" alt="Pulpit rock">
-                                </a>
-                            </div>
-                            <div class="col-md-2 column">
-                                <a href="http://book.douban.com/subject/3831788/">
-                                    <img class="row-img" src="images/首页轮播/逃离.jpg" alt="Pulpit rock">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
                         <table>
                             <tr>
-                                <td>
+                                <td class="row">
                                     <a class="col-md-2" href="http://book.douban.com/subject/26831234/"><img class="row-img" src="images/首页轮播/不属于我们的世纪.jpg" alt="Pulpit rock"></a>
                                     <a class="col-md-2" href="http://book.douban.com/subject/26882320/"><img class="row-img" src="images/首页轮播/嗨，好久不见.jpg" alt="Pulpit rock"></a>
                                     <a class="col-md-2" href="http://book.douban.com/subject/26871658/"><img class="row-img" src="images/首页轮播/爱有失落时.jpg" alt="Pulpit rock"></a>
@@ -192,7 +108,21 @@
                     <div class="item">
                         <table>
                             <tr>
-                                <td>
+                                <td class="row">
+                                    <a class="col-md-2" href="http://book.douban.com/subject/26831234/"><img class="row-img" src="images/首页轮播/不属于我们的世纪.jpg" alt="Pulpit rock"></a>
+                                    <a class="col-md-2" href="http://book.douban.com/subject/26882320/"><img class="row-img" src="images/首页轮播/嗨，好久不见.jpg" alt="Pulpit rock"></a>
+                                    <a class="col-md-2" href="http://book.douban.com/subject/26871658/"><img class="row-img" src="images/首页轮播/爱有失落时.jpg" alt="Pulpit rock"></a>
+                                    <a class="col-md-2" href="http://book.douban.com/subject/26892080/"><img class="row-img" src="images/首页轮播/猎豹.jpg" alt="Pulpit rock"></a>
+                                    <a class="col-md-2" href="http://book.douban.com/subject/26837288/"><img class="row-img" src="images/首页轮播/钓鱼的男孩.jpg" alt="Pulpit rock"></a>
+                                    <a class="col-md-2" href="http://book.douban.com/subject/26382433/"><img class="row-img" src="images/首页轮播/无声告白.jpg" alt="Pulpit rock"></a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="item">
+                        <table>
+                            <tr>
+                                <td class="row">
                                     <a class="col-md-2" href="http://book.douban.com/subject/26882355/"><img class="row-img" src="images/首页轮播/去别处.jpg" alt="Pulpit rock"></a>
                                     <a class="col-md-2" href="http://book.douban.com/subject/26340138/"><img class="row-img" src="images/首页轮播/岛上书店.jpg" alt="Pulpit rock"></a>
                                     <a class="col-md-2" href="http://book.douban.com/subject/26889865/"><img class="row-img" src="images/首页轮播/我不知道该如何像正常人那样生活.jpg" alt="Pulpit rock"></a>
@@ -207,8 +137,6 @@
             <!-- Carousel nav -->
             <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
             <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-            </div>
-        </div>
     </div>
 
     <div class="row">
