--- a/Year.html
+++ b/Year.html
@@ -39,14 +39,14 @@
   <!-- 屏幕宽度小于768px时，div.navbar-responsive-collapse容器里的内容都会隐藏，显示icon-bar图标，当点击icon-bar图标时，再展开。屏幕大于768px时，默认显示。 -->
   <div class="collapse navbar-collapse navbar-responsive-collapse">
     	<ul class="nav nav-pills" style="float: right;">
-      		<li><a href="index.html">首页</a></li>
+      		<li><a href="index.html">豆瓣首页</a></li>
       		<li><a href="Today.html">今日推荐</a></li>
       		<li><a href="Year.html">年度读书</a></li>
       		<li><a href="Newbook.html">新书推荐</a></li>
       		<li><a href="About.html">关于本站</a></li>
       		<li class="dropdown">
       			<a class="dropdown-toggle" data-toggle="dropdown">
-                                            无名
+                                            无名之人
                     <span class="caret"></span>
                 </a>
       			<ul class="dropdown-menu">
@@ -59,54 +59,7 @@
 	 	</ul>
   </div>
 </div>
-    <div class="row clearfix">
-        <div class="col-md-12 column">
-            <div class="nav nav-tabs pull-left">
-                <h1>清风徐来
-                    <small>——精品图书推荐</small>
-                </h1>
-            </div>
-            <ul class="nav nav-tabs pull-right">
-                <li>
-                    <a href="index.html">首页</a>
-                </li>
-                <li>
-                    <a href="Today.html">今日推荐</a>
-                </li>
-                <li>
-                    <a href="Year.html">年度读书</a>
-                </li>
-                <li>
-                    <a href="Newbook.html">新书推荐</a>
-                </li>
-                <li>
-                    <a href="About.html">关于本站</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">更多
-                        <strong class="caret"></strong>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">登陆</a>
-                        </li>
-                        <li>
-                            <a href="#">注册</a>
-                        </li>
-                        <li>
-                            <a href="#">了解更多</a>
-                        </li>
-                        <li class="divider">
-                        </li>
-                        <li>
-                            <a href="#">赞赏</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</div>
+
 
 <div class="container mainbody">
     <div class="tabbable" id="tabs-984514">
