--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
   <!-- 屏幕宽度小于768px时，div.navbar-responsive-collapse容器里的内容都会隐藏，显示icon-bar图标，当点击icon-bar图标时，再展开。屏幕大于768px时，默认显示。 -->
   <div class="collapse navbar-collapse navbar-responsive-collapse">
     	<ul class="nav nav-pills" style="float: right;">
-      		<li><a href="index.html">首页</a></li>
+      		<li><a href="index.html">豆瓣首页</a></li>
       		<li><a href="Today.html">今日推荐</a></li>
       		<li><a href="Year.html">年度读书</a></li>
       		<li><a href="Newbook.html">新书推荐</a></li>
       		<li><a href="About.html">关于本站</a></li>
       		<li class="dropdown">
       			<a class="dropdown-toggle" data-toggle="dropdown">
-                                            无名
+                                            无名之人
                     <span class="caret"></span>
                 </a>
       			<ul class="dropdown-menu">
